docs: update agent instructions with documentation maintenance protocol

--- a/apps/docs/content/docs/resources/agents.mdx
+++ b/apps/docs/content/docs/resources/agents.mdx
@@ -55,6 +55,10 @@ updated_at: "YYYY-MM-DD"
 - **description:** ...
 ```
 
+### Documentation Protocol
+
+**Critical:** Whenever features are implemented or refactored, the agent **must** verify if the documentation in `apps/docs` requires updates (e.g., changes to API, new concepts, setup instructions) and perform those updates immediately.
+
 ## Code Style
 
 - **TypeScript**: Strict mode enabled.
