docs: refine documentation maintenance protocol scope

--- a/apps/docs/content/docs/resources/agents.mdx
+++ b/apps/docs/content/docs/resources/agents.mdx
@@ -55,9 +55,9 @@ updated_at: "YYYY-MM-DD"
 - **description:** ...
 ```
 
-### Documentation Protocol
+### System Documentation Protocol
 
-**Critical:** Whenever features are implemented or refactored, the agent **must** verify if the documentation in `apps/docs` requires updates (e.g., changes to API, new concepts, setup instructions) and perform those updates immediately.
+**Critical:** When modifying the **BlueprintAI codebase** (e.g., adding features, updating APIs, changing schemas), the agent **must** verify if the documentation in `apps/docs` requires updates and perform those updates immediately. This ensures the system documentation remains accurate.
 
 ## Code Style
 
