chore(branding): rename BlueprintAI to Transmute
- Update all UI text, titles, and metadata to use Transmute branding
- Update AGENTS.md, README.md with new name
- Update apps/web sidebar and layout metadata
- Update apps/docs layout, homepage, and all MDX content
- Update all projects/ PRD and task files
- Rename package.json from blueprint-ai-monorepo to transmute-monorepo
- Update env var reference from BLUEPRINT_API_KEY to TRANSMUTE_API_KEY

Note: Historical PR links in tasks files preserved (will auto-redirect after GH repo rename)

--- a/apps/docs/content/docs/core-concepts/projects.mdx
+++ b/apps/docs/content/docs/core-concepts/projects.mdx
@@ -25,5 +25,4 @@ projects/
 
 ## Task Parsing
 
-BlueprintAI automatically parses `tasks.md` files within project directories to generate the task board and list views in the web application.
-
+Transmute automatically parses `tasks.md` files within project directories to generate the task board and list views in the web application.
