--- a/apps/docs/content/docs/core-concepts/tasks.mdx
+++ b/apps/docs/content/docs/core-concepts/tasks.mdx
@@ -1,11 +1,11 @@
 ---
 title: Tasks
-description: Understanding Tasks in BlueprintAI
+description: Understanding Tasks in Transmute
 ---
 
 # Tasks
 
-Tasks are the fundamental units of work in BlueprintAI. They represent actionable items that need to be completed.
+Tasks are the fundamental units of work in Transmute. They represent actionable items that need to be completed.
 
 ## Structure
 
@@ -24,4 +24,3 @@ Tasks can have subtasks, allowing for granular breakdown of complex activities. 
 ## Markdown Support
 
 The core of a Task's detailed description is written in Markdown. This allows for rich text formatting, code blocks, and lists to clearly define requirements.
-
