--- a/apps/docs/content/docs/index.mdx
+++ b/apps/docs/content/docs/index.mdx
@@ -1,21 +1,19 @@
 ---
 title: Getting Started
-description: Introduction to BlueprintAI Task Management System
+description: Introduction to Transmute Task Management System
 ---
 
-# BlueprintAI
+# Transmute
 
-BlueprintAI is an intelligent Task Management System designed to streamline project workflows and enhance productivity through AI-driven automation.
+Transmute is an intelligent Task Management System designed to streamline project workflows and enhance productivity through AI-driven automation.
 
 ## Core Philosophy
 
-BlueprintAI was architected with a specific vision: **Bridging the gap between AI Agents and Human UX**.
+Transmute was architected with a specific vision: **Bridging the gap between AI Agents and Human UX**.
 
 - **Designed for Agents**: The system enables AI agents to generate Product Requirements (PRDs) and Tasks using standard **Markdown**. This simple, text-based interface is ideal for LLMs to generate structured, consistent content without complex API overhead.
-- **Built for Humans**: While agents speak Markdown, humans prefer rich, interactive interfaces. BlueprintAI parses these agent-generated files to render a **premium, user-friendly UI**, providing a seamless experience for tracking progress, managing priorities, and visualizing project status.
-- **Bridge to Enterprise**: BlueprintAI isn't just a local sandbox. We are designing native integrations to seamlessly transform your local tasks into deliverables within your company's task management systems (like Jira, Linear, or Asana), closing the loop between AI planning and enterprise execution.
+- **Built for Humans**: While agents speak Markdown, humans prefer rich, interactive interfaces. Transmute parses these agent-generated files to render a **premium, user-friendly UI**, providing a seamless experience for tracking progress, managing priorities, and visualizing project status.
+- **Bridge to Enterprise**: Transmute isn't just a local sandbox. We are designing native integrations to seamlessly transform your local tasks into deliverables within your company's task management systems (like Jira, Linear, or Asana), closing the loop between AI planning and enterprise execution.
 
 > [!NOTE]
-> Are you a developer looking to contribute? Check out our [README](https://github.com/1001Josias/blueprint-ai) and [AGENTS.md](https://github.com/1001Josias/blueprint-ai/blob/main/AGENTS.md) for technical architecture and setup instructions.
-
-
+> Are you a developer looking to contribute? Check out our [README](https://github.com/1001Josias/transmute) and [AGENTS.md](https://github.com/1001Josias/transmute/blob/main/AGENTS.md) for technical architecture and setup instructions.
